<resources>
    <string name="app_name">Women Health Trail</string>
    <string name="women_health">Women\'s Health</string>
    <string name="welcome_to_you_health_application">Welcome to you health application.</string>
    <string name="now_let_us_begin">Now let us begin.</string>
    <string name="button">Begin</string>
    <string name="the_logo_of_the_women_app">The logo of the women app</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="signup">SignUp</string>
    <string name="registration">Registration</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="cell_number">Cell Number</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="submit">Submit</string>
    <string name="passwordRules">*\t Password should more than 8 characters \n*\t Password can contain a lowercase,uppercase characters \n*\t Password can contain numerics</string>
    <string name="password_rules_lbl">Password Rules:</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="reg_password">Password</string>
</resources>