<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@drawable/bb">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="242dp"
        android:layout_height="238dp"
        android:contentDescription="@string/the_logo_of_the_women_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logoicon2_01" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/women_health"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btnBegin"
        android:layout_width="235dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/btn_bg"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.115" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="378dp"
        android:layout_height="44dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/welcome_to_you_health_application"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="376dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/now_let_us_begin"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>