<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bb"
    android:backgroundTintMode="multiply"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/txt_logo"
        android:layout_width="54dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/logoicon2_01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registrationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/comfortaa_bold"
        android:shadowColor="@color/material_dynamic_neutral10"
        android:text="@string/registration"
        android:textColor="@color/design_default_color_on_secondary"
        android:textColorHint="@color/material_dynamic_neutral10"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_logo"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/txt_logo"
        app:layout_constraintTop_toBottomOf="@+id/txt_logo" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="296dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center"
        android:hint="@string/firstname"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:shadowColor="@color/material_dynamic_neutral10"
        android:text=""
        android:textColor="@color/design_default_color_on_secondary"
        android:textColorHint="@color/material_dynamic_neutral10"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/registrationText"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="@+id/registrationText"
        app:layout_constraintTop_toBottomOf="@+id/registrationText" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:shadowColor="@color/material_dynamic_neutral10"
        android:text=""
        android:textColor="@color/design_default_color_on_secondary"
        android:textColorHint="@color/material_dynamic_neutral10"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/firstname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/firstname"
        app:layout_constraintTop_toBottomOf="@+id/firstname" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:shadowColor="@color/material_dynamic_neutral10"
        android:text=""
        android:textColor="@color/design_default_color_on_secondary"
        android:textColorHint="@color/material_dynamic_neutral10"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/lastname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lastname"
        app:layout_constraintTop_toBottomOf="@+id/lastname" />


    <EditText
        android:id="@+id/cellnumber"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center"
        android:hint="@string/cell_number"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:shadowColor="@color/material_dynamic_neutral10"
        android:textColor="@color/design_default_color_on_secondary"
        android:textColorHint="@color/material_dynamic_neutral10"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <EditText
        android:id="@+id/username"
        android:layout_width="174dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:shadowColor="@color/material_dynamic_neutral10"
        android:text=""
        android:textColor="@color/design_default_color_on_secondary"
        android:textColorHint="@color/material_dynamic_neutral10"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/cellnumber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cellnumber"
        app:layout_constraintTop_toBottomOf="@+id/cellnumber" />

    <EditText
        android:id="@+id/age"
        android:layout_width="87dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center"
        android:hint="@string/age"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:shadowColor="@color/material_dynamic_neutral10"
        android:textColor="@color/design_default_color_on_secondary"
        android:textColorHint="@color/material_dynamic_neutral10"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/cellnumber"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/cellnumber" />

    <EditText
        android:id="@+id/password"
        android:layout_width="294dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center"
        android:hint="@string/reg_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:shadowColor="@color/material_dynamic_neutral10"
        android:text=""
        android:textColor="@color/design_default_color_on_secondary"
        android:textColorHint="@color/material_dynamic_neutral10"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/age"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/repeatPassword"
        android:layout_width="294dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:shadowColor="@color/material_dynamic_neutral10"
        android:text=""
        android:textColor="@color/design_default_color_on_secondary"
        android:textColorHint="@color/material_dynamic_neutral10"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/age"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/passwordRule_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="start"
        android:shadowColor="@color/material_dynamic_neutral10"
        android:text="@string/password_rules_lbl"
        android:textColor="@color/material_dynamic_neutral10"
        android:textColorHint="@color/material_dynamic_neutral10"
        android:textSize="7sp"
        app:layout_constraintEnd_toEndOf="@+id/repeatPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/repeatPassword"
        app:layout_constraintTop_toBottomOf="@+id/repeatPassword" />

    <TextView
        android:id="@+id/passwordRule1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="start"
        android:shadowColor="@color/material_dynamic_neutral10"
        android:text="@string/passwordRules"
        android:textColor="@color/material_dynamic_neutral10"
        android:textColorHint="@color/material_dynamic_neutral10"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordRule_label"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordRule_label"
        app:layout_constraintTop_toBottomOf="@+id/passwordRule_label" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/btn_bg"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/repeatPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/repeatPassword"
        app:layout_constraintTop_toBottomOf="@+id/repeatPassword"
        app:layout_constraintVertical_bias="0.071" />


</androidx.constraintlayout.widget.ConstraintLayout>